2006-02-18  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/style.css: Fixed a couple of tutorial style issues
	* docs/tutorial/gtkmm-tut.xml: updated and re-organized the installation
	section of the tutorial a bit more -- added dependency on cairomm / cairo,
	reworded a few things, etc.
	Added a new appendix explaining how to build and install gtkmm from CVS
	using jhbuild.

2006-02-17  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbuf.ccg: save_to_buffer(): Use a terminating NULL when
	calling gdk_pixbuf_save_to_buffer() to avoid a warning about the sentinel.

2006-02-13  Rob Page  <page.rob@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: minor fixes to gettext chapter, a typo and
	a broken link (Bug #331077)

2006-02-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/assistant.hg: Wrap the prepared signal, now that it is fixed in GTK+.
	* gtk/src/entry.hg: Add a link to the email that says it is OK to wrap the 
	activate signal.

2006-02-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/clipboard.hg: Wrap the owner-changed signal, which was new in 
	GTK+ 2.8, I think. Use no_default_handler to avoid an ABI break.
	* gtk/src/gtk_signals.defs: Added defs for GtkClipboard.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Generate .defs for GtkClipboard.
	Bug #330139 from Jonathan Jongsma.

2006-01-30  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: fixed a minor typo in the clipboard section
	of the tutorial that referred to get_data_as_text() instead of
	get_data_as_string()

2006-01-29  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am: Remove unnecessary icons installation line - 
	it happens in the sub-directory.
	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/comboboxentry_complex.png:
	* docs/tutorial/figures/comboboxentry_text.png: Added screenshots.
	* docs/tutorial/gtkmm-tut.xml: Write basic Combo Boxes chapter, replacing the 