@@ -4000,13 +4000,22 @@ Gtk::Alignment
 Gtk::Arrow
 Gtk::Bin
 Gtk::Box
+Gtk::Button
+Gtk::CheckButton
+Gtk::Fixed
 Gtk::Image
 Gtk::Item
 Gtk::Label
+Gtk::MenuItem
+Gtk::Notebook
+Gtk::Paned
 Gtk::Pixmap
+Gtk::RadioButton
+Gtk::Range
 Gtk::ScrolledWindow
 Gtk::Separator
 Gtk::Table
+Gtk::Toolbar
 Gtk::AspectFrame
 Gtk::Frame
 Gtk::VBox
