@@ -1,5 +1,11 @@
 2006-02-18  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
+	* docs/tutorial/gtkmm-tut.xml: synchronized the list of widgets without
+	windows with the documentation from the Gtk+ tutorial (see
+	http://gtk.org/tutorial/x502.html)
+
+2006-02-18  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
 	* docs/tutorial/style.css: Fixed a couple of tutorial style issues
 	* docs/tutorial/gtkmm-tut.xml: updated and re-organized the installation
 	section of the tutorial a bit more -- added dependency on cairomm / cairo,
